noinst_LIBRARIES = libparlex.a
libparlex_a_SOURCES = abstract_syntax_graph.cpp builtins.cpp job.cpp context.cpp match_class.cpp parser.cpp producer.cpp recognizer.cpp state_machine.cpp subjob.cpp token.cpp uni_trunc.cpp
libparlex_a_CPPFLAGS = -std=c++11 -I../../include/parlex -I../../include/parlex/details -I../../include/extras